--- a/menu.html
+++ b/menu.html
@@ -431,7 +431,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Stagione<small>Serviti con patate fritte e a cottura media</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    				<!--	<div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepe_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
@@ -448,7 +448,7 @@
     								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -490,7 +490,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
     								<h3>Estivo<span class="price ">11,9</span></h3>
-    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco; pesto basilico e pinoli.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -499,7 +499,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/EstivoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
     								<h3>Estivo Doppio<span class="price ">15,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco; pesto basilico e pinoli.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -735,6 +735,14 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
+    								<h3>Italicum<span class="price "></span></h3>
+    								<p class="">Bionda fruttata senza glutine 5,0%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
     								<h3>Bock<span class="price "></span></h3>
     								<p class="">Rossa stile tedesco dolce 6,5%. Birrificio Forst.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
@@ -748,14 +756,22 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Italicum<span class="price "></span></h3>
-    								<p class="">Ale 5%. Birrificio dei Castelli<span class=""><br><small>Allergeni: --</small></span></p>
+    								<h3>Ape Regina<span class="price "></span></h3>
+    								<p class="">Blonde Ale al miele 6,9%. Birrificio MC-77.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
+    					<!-- <div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<h3>Californication<span class="price "></span></h3>
+    								<p class="">West Coast IPA 6,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    							</div>
+    						</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -775,8 +791,24 @@
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
+    								<h3>Extrema Ratio<span class="price "></span></h3>
+    								<p class="">Doppia IPA 7,4%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    							</div>
+    						</div>
+    					</div> -->
+    					<!-- <div class="cell">
+    						<div class="card">
+    							<div class="card-section">
     								<h3>Hattori Hanzo<span class="price "></span></h3>
-    								<p class="">oppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    							</div>
+    						</div>
+    					</div> -->
+    					<!-- <div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<h3>Breaking Hops<span class="price "></span></h3>
+    								<p class="">Doppia IPA 7,2%. Birrificio MC-77.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div> -->
@@ -841,14 +873,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
     								<p class="">American Pale Ale 6,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
