--- a/menu.html
+++ b/menu.html
@@ -232,7 +232,7 @@
     							</div>
     						</div>
     					</div>
-    				<!--	<div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomoki Special Salmone">
@@ -240,7 +240,7 @@
     								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     				</div>
     			</div>
     		</section>
