--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -255,6 +255,12 @@
     						  	<p>Accettiamo solo ordini in giornata. Se devi effettuare un ordine molto corposo, ti chiediamo la gentilezza di inviarlo almeno 30/40 minuti prima per fartelo trovare pronto all'orario da te desiderato.</p>
     					  	</div>
     					</li>
+    					<li class="accordion-item" data-accordion-item>
+    					  	<a href="#fumatoriFaq" class="accordion-title">Posso fumare ai tavoli all'aperto?</a>
+    					  	<div class="accordion-content" data-tab-content id="orarioOrdineAsportoFaq">
+    						  	<p>No, non è consentito fumare ai tavoli e nei pressi dei tavoli. Ci sono due aree lantane dai tavoli dove è possibile fumare.</p>
+    					  	</div>
+    					</li>
     				</ul>
     			</div>
     		</div>
