--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -257,7 +257,7 @@
     					</li>
     					<li class="accordion-item" data-accordion-item>
     					  	<a href="#fumatoriFaq" class="accordion-title">Posso fumare ai tavoli all'aperto?</a>
-    					  	<div class="accordion-content" data-tab-content id="orarioOrdineAsportoFaq">
+    					  	<div class="accordion-content" data-tab-content id="fumatoriFaq">
     						  	<p>No, non è consentito fumare ai tavoli e nei pressi dei tavoli. Ci sono due aree lantane dai tavoli dove è possibile fumare.</p>
     					  	</div>
     					</li>
