--- a/menu.html
+++ b/menu.html
@@ -110,7 +110,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/NigiriSpecial_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Special">
     								<h3>Nigiri Special<span class="price ">14</span></h3>
-    								<p>6 nigiri speciali dello chef.<span class=""><br><small>Allergeni: Crostacei, Uova, Pesce, Soia, Latte, Frutta a guscio, Senape, Semi di sesamo</small></span></p>
+    								<p>6 nigiri speciali dello chef.<span class=""><br><small>Allergeni: Glutine, Crostacei, Uova, Pesce, Soia, Latte, Frutta a guscio, Senape, Semi di sesamo</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -119,7 +119,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/GunkanSpecial_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Gunkan Special">
     								<h3>Gunkan Special<span class="price ">14</span></h3>
-    								<p>6 gunkan speciali dello chef.<span class=""><br><small>Allergeni: Crostacei, Uova, Pesce, Soia, Latte, Frutta a guscio, Senape, Semi di sesamo</small></span></p>
+    								<p>6 gunkan speciali dello chef.<span class=""><br><small>Allergeni: Glutine, Crostacei, Uova, Pesce, Soia, Latte, Frutta a guscio, Senape, Semi di sesamo</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -142,7 +142,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollMandorle_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Mandorle">
     								<h3>Roll Mandorle<span class="price ">11</span></h3>
-    								<p>Salmone e philadelphia ricoperti da tobiko red, mandorle, maionese piccante e pasta kataifi (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Latte, Frutta a guscio, Senape</small></span></p>
+    								<p>Salmone e philadelphia ricoperti da tobiko red, mandorle, maionese piccante e pasta kataifi (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte, Frutta a guscio, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
