--- a/menu.html
+++ b/menu.html
@@ -187,7 +187,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollVegetariano_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Vegetariano">
     								<h3>Roll Vegetariano<span class="price ">10</span></h3>
-    								<p>Carota, cetrioli e avocado ricoperti da philadelphia, maionese rosa e cipolla fritta. Il tutto avvolto in carta di soia gialla (8 pezzi).<span class=""><br><small>Allergeni: Uova, Soia, Latte, Senape</small></span></p>
+    								<p>Carota, cetrioli e avocado ricoperti da philadelphia, maionese rosa e cipolla fritta. Il tutto avvolto in carta di soia gialla (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
