--- a/menu.html
+++ b/menu.html
@@ -237,7 +237,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomoki Special Salmone">
     								<h3>Hosomaki Special Salmone<span class="price ">10</span></h3>
-    								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Pesce, Soia, Latte, Senape</small></span></p>
+    								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
