--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#sushi">Sushi</a></li> -->
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -84,7 +84,7 @@
     <div id="menupage-text">
     	<div class="grid-container">
     		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
-    			<div class="small-12 cell">
+    			<div class="small-12 cell" hidden>
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -125,7 +125,7 @@
     					</div>
     				</div>
     			</div>
-    			<div class="small-12 cell">
+    			<div class="small-12 cell" hidden>
     				<h2>Sushi Selezione di Roll</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -193,7 +193,7 @@
     					</div>
     				</div>
     			</div>
-    			<div class="small-12 cell">
+    			<div class="small-12 cell" hidden>
     				<h2>Sushi Hosomaki</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
