--- a/menu.html
+++ b/menu.html
@@ -178,7 +178,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollBranzino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Branzino">
     								<h3>Roll Branzino<span class="price ">12</span></h3>
-    								<p>Branzino ricoperto da salmone scottato e maionese alla senape (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Senape</small></span></p>
+    								<p>Branzino ricoperto da salmone scottato e maionese alla senape (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
