--- a/menu.html
+++ b/menu.html
@@ -92,7 +92,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollSpecialTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Special Tonno">
     								<h3>Roll Special Tonno<span class="price ">14</span></h3>
-    								<p>Tonno e mango ricoperti da tartare di tonno, maionese e granella di pistacchio (8 pezzi).<span class=""><br><small>Allergeni: Pesce, Soia, Latte, Frutta a guscio, Senape</small></span></p>
+    								<p>Tonno e mango ricoperti da tartare di tonno, maionese e granella di pistacchio (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Soia, Frutta a guscio</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -101,7 +101,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollSpecialSalmoneFritto_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Special Salmone Fritto">
     								<h3>Roll Special Salmone Fritto<span class="price ">15</span></h3>
-    								<p>Salmone fritto e insalata croccante ricoperti da carpaccio di branzino scottato e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Pesce, Soia, Uova, Senape</small></span></p>
+    								<p>Salmone fritto e insalata croccante ricoperti da carpaccio di branzino scottato e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Soia, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -160,7 +160,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Tonno">
     								<h3>Roll Tonno<span class="price ">12</span></h3>
-    								<p>Tonno, avocado e pomodoro secco ricoperti da tobiko red e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce</small></span></p>
+    								<p>Tonno, avocado e pomodoro secco ricoperti da tobiko red e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -178,7 +178,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollBranzino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Branzino">
     								<h3>Roll Branzino<span class="price ">12</span></h3>
-    								<p>Branzino ricoperto da salmone scottato e maionese alla senape (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Senape</small></span></p>
+    								<p>Branzino ricoperto da salmone scottato e maionese alla senape (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -431,7 +431,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Stagione<small>Serviti con patate fritte e a cottura media</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepe_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
@@ -439,8 +439,8 @@
     								<p>Burger di manzo (180 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
-    					<!-- <div class="cell">
+    					</div>
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepeDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
@@ -448,7 +448,7 @@
     								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -467,7 +467,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
@@ -484,7 +484,7 @@
     								<p>Doppio burger di manzo (360 grammi), omposta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -608,7 +608,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema chantilly.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -827,8 +827,8 @@
     								<p class="">New England IPA 6,5%. Birrificio MC-77.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
-    				</div> -->
+    					</div> -->
+    				</div>
     			</div>
     			<div class="small-12 cell">
     				<h2>Birra Artigianale in Bottiglia</h2>
@@ -876,16 +876,16 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Californication 50cl<span class="price ">6</span></h3>
-                                    <p class="">West Coast IPA 6,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <h3>Marina 50cl<span class="price ">6</span></h3>
+                                    <p class="">American Pale Ale 6,4%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Marina 50cl<span class="price ">6</span></h3>
-                                    <p class="">American Pale Ale 6,4%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <h3>Californication 50cl<span class="price ">6</span></h3>
+                                    <p class="">West Coast IPA 6,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
