--- a/checkout.html
+++ b/checkout.html
@@ -243,13 +243,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span>19 - 23</li>
-    					<li><span>Martedì:</span>19 - 23</li>
-    					<li><span>Mercoledì:</span>19 - 23</li>
-    					<li><span>Giovedì:</span>19 - 23</li>
-    					<li><span>Venerdì:</span>19 - 23</li>
-    					<li><span>Sabato:</span>19 - 23</li>
-    					<li><span>Domenica:</span>19 - 23</li>
+    					<li><span>Lunedì:</span><time>19 - 23</time></li>
+    					<li><span>Martedì:</span><time>19 - 23</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
+    					<li><span>Giovedì:</span><time>19 - 23</time></li>
+    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Sabato:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 23</time></li>
     				</ul>
     			</div>
     			<div class="cell">
