--- a/menu.html
+++ b/menu.html
@@ -431,7 +431,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Stagione<small>Serviti con patate fritte e a cottura media</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepe_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
@@ -448,7 +448,7 @@
     								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -467,7 +467,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    				<!--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
@@ -484,7 +484,7 @@
     								<p>Doppio burger di manzo (360 grammi), omposta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
