--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<!-- <li><a href="#sushi">Sushi</a></li> -->
+    				<li><a href="#sushi">Sushi</a></li>
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -84,7 +84,7 @@
     <div id="menupage-text">
     	<div class="grid-container">
     		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
-    			<div class="small-12 cell" hidden>
+    			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -125,7 +125,7 @@
     					</div>
     				</div>
     			</div>
-    			<div class="small-12 cell" hidden>
+    			<div class="small-12 cell">
     				<h2>Sushi Selezione di Roll</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -193,7 +193,7 @@
     					</div>
     				</div>
     			</div>
-    			<div class="small-12 cell" hidden>
+    			<div class="small-12 cell">
     				<h2>Sushi Hosomaki</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -1290,14 +1290,14 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span>19 - 23</li>
-    					<li><span>Martedì:</span>19 - 23</li>
-    					<li><span>Mercoledì:</span>19 - 23</li>
-    					<li><span>Giovedì:</span>19 - 23</li>
-    					<li><span>Venerdì:</span>19 - 23</li>
-    					<li><span>Sabato:</span>19 - 23</li>
-    					<li><span>Domenica:</span>19 - 23</li>
-    				</ul>
+                        <li><span>Lunedì:</span><time>19 - 23</time></li>
+                        <li><span>Martedì:</span><time>19 - 23</time></li>
+                        <li><span>Mercoledì:</span><time>19 - 23</time></li>
+                        <li><span>Giovedì:</span><time>19 - 23</time></li>
+                        <li><span>Venerdì:</span><time>19 - 23</time></li>
+                        <li><span>Sabato:</span><time>19 - 23</time></li>
+                        <li><span>Domenica:</span><time>19 - 23</time></li>
+                    </ul>
     			</div>
     			<div class="cell">
     				<h1 class="subheader">Mappa del Sito</h1>
