--- a/menu.html
+++ b/menu.html
@@ -1153,7 +1153,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Ginpilz<span class="price ">8</span></h3>
-    								<p class="">Aromatico. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Gin con chiaro profumo e sapore di Ginepro. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
@@ -1161,7 +1161,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Silverback<span class="price ">8</span></h3>
-    								<p class="">London Gin. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">London Dry Gin con profumi agrumati e floreali; speziato, erbaceo con note dolci di arancia, miele e citronella e sentori di ginepro. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
@@ -1169,7 +1169,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Puro<span class="price ">8</span></h3>
-    								<p class="">Morbido. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Complesso, con un carattere officinale fresco e agrumato, ma sorpendentemente morbido e persistente. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
