--- a/asporto.html
+++ b/asporto.html
@@ -21,7 +21,7 @@
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.8.9/dist/cookieconsent.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.css">
     <!-- Facebook Pixel Code -->
     <script type="text/plain" data-cookiecategory="targeting" >
         !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -107,7 +107,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#sushi">Sushi</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -124,7 +124,7 @@
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y"  id="sushi" data-magellan-target="sushi">
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi i Nostri Signature</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     							<div class="cell">
@@ -193,7 +193,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Special Mix</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -262,7 +262,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi per Iniziare</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -331,7 +331,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Selezione di Roll</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -400,7 +400,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Hosomaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -469,7 +469,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Uramaki Classici</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -538,7 +538,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Temaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -607,7 +607,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Nigiri</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -676,7 +676,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Kit</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
@@ -1540,6 +1540,6 @@
     	</div>
     </footer>
     <script src="assets/js/app.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.8.9/dist/cookieconsent.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.js"></script>
 </body>
 </html>
