--- a/menu.html
+++ b/menu.html
@@ -740,14 +740,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bock<span class="price "></span></h3>
     								<p class="">Rossa stile tedesco dolce 6,5%. Birrificio Forst.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -756,6 +756,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Sofronia<span class="price "></span></h3>
+                                    <p class="">Blanche con ibisco 5%. Birrificio MC-77.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -780,14 +788,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Brevis Furor<span class="price "></span></h3>
     								<p class="">IPA 6,3%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1013,14 +1021,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Calafuria Rosato igt Salento<span class="price ">20</span></h3>
     								<p class="">Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
