--- a/menu.html
+++ b/menu.html
@@ -740,14 +740,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bock<span class="price "></span></h3>
     								<p class="">Rossa stile tedesco dolce 6,5%. Birrificio Forst.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
