add reset email

--- a/reset-password.html
+++ b/reset-password.html
@@ -62,16 +62,17 @@
         <form autocomplete="on">
             <div class="grid-x grid-padding-x">
                 <div class="small-6 medium-5 large-4 xlarge-4 xxlarge-3 cell">
-                    <label for="password"><strong>Nuova Password*</strong>
-                         <input id="password" autocomplete="new-password" type="password" name="password" class="required error password"/>
+                    <label for="new-password"><strong>Nuova Password*</strong>
+                         <input id="new-password" autocomplete="new-password" type="password" name="new-password" class="required error password"/>
                     </label>
                 </div>
                 <div class="small-12 cell extra-space-button">
-                    <button class="button submit" style="margin-bottom:3rem" id="" type="button">Modifica la Password</button>
+                    <button class="button submit" style="margin-bottom:3rem" id="new-password-btn" type="button">Modifica la Password</button>
                 </div>
             </div>
         </form>
     </div>
+    
     <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal>
         <header class="main-header border-bottom">
             <h2 class="h2-titolo-carrello">Accedi o Registrati</h2>
@@ -116,10 +117,10 @@
                         <p>Inserisci l'email con cui ti sei registrato per ricevere un link per modificare la password.</p>
                     </div>
                     <div class="small-10 cell">
-                        <label for="email-login"><strong>Email</strong>
-                            <input id="email-login" type="email" autocomplete="username" name="email-login" class="required error email" placeholder=""/>
+                        <label for="password-reset-email"><strong>Email</strong>
+                            <input id="password-reset-email" type="email" autocomplete="username" name="password-reset-email" class="required error email" placeholder=""/>
                         </label>
-                        <a class="button submit extra-space-button" href="reset-password-landing.html" type="button">Modifica la Password</a>
+                        <button class="button submit extra-space-button" id="password-reset-btn" type="button">Modifica la Password</button>
                         <br><br>
                     </div>
                 </div>
@@ -188,6 +189,7 @@
             </div>
         </footer>
     </div>
+
     <footer class="panel-footer">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
