--- a/reset-password-success.html
+++ b/reset-password-success.html
@@ -112,10 +112,10 @@
                         <p>Inserisci l'email con cui ti sei registrato per ricevere un link per modificare la password.</p>
                     </div>
                     <div class="small-10 cell">
-                        <label for="email-login"><strong>Email</strong>
-                            <input id="email-login" type="email" autocomplete="username" name="email-login" class="required error email" placeholder=""/>
+                        <label for="password-reset-email"><strong>Email</strong>
+                            <input id="password-reset-email" type="email" autocomplete="username" name="password-reset-email" class="required error email" placeholder=""/>
                         </label>
-                        <a class="button submit extra-space-button" href="reset-password-landing.html" type="button">Modifica la Password</a>
+                        <button class="button submit extra-space-button" id="password-reset-btn" type="button">Modifica la Password</button>
                         <br><br>
                     </div>
                 </div>
@@ -184,6 +184,7 @@
             </div>
         </footer>
     </div>
+
     <footer class="panel-footer">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
