--- a/menu.html
+++ b/menu.html
@@ -1210,7 +1210,7 @@
     		</section>
     	</div>
     </div>
-    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal>
+    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header border-bottom">
             <h2 class="h2-titolo-carrello">Accedi o Registrati</h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
@@ -1240,6 +1240,31 @@
                 </div>
             </div>
         </form>
+        <!-- modal reset password -->
+        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal data-deep-link="true">
+            <form autocomplete="on">
+                <header class="main-header border-bottom">
+                    <h2 class="h2-titolo-carrello">Modifica la Password</h2>
+                    <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </header>
+                <div class="grid-x grid-padding-x">
+                    <div class="small-12 cell extra-space">
+                        <p>Inserisci l'email con cui ti sei registrato per ricevere un link per modificare la password.</p>
+                    </div>
+                    <div class="small-10 cell">
+                        <label for="password-reset-email"><strong>Email</strong>
+                            <input id="password-reset-email" type="email" autocomplete="username" name="password-reset-email" class="required error email" placeholder=""/>
+                        </label>
+                        <button class="button submit extra-space-button" id="password-reset-btn" type="button">Modifica la Password</button>
+                        <br><br>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!-- fine modal reset password -->
+
        <!--  <div class="grid-x grid-padding-x grid-margin-y">
             <div class="small-12 cell">
                 <h5 class="text-center subheader">oppure</h5>
@@ -1251,6 +1276,7 @@
                 <button type="button" class="button alert">Accedi con Google</button>
             </div>
         </div> -->
+
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
