--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -254,7 +254,7 @@
     </div>
     <!-- fine modale invio promemoria ai clienti e aggiungere/rimuovere giorni chiusura-->
     <!-- inizio modale accedi registrati-->
-    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal>
+    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header">
             <h2 class="h2-titolo-carrello"></h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
@@ -285,7 +285,7 @@
             </div>
         </form>
         <!-- modal reset password -->
-        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal>
+        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal data-deep-link="true">
             <form autocomplete="on">
                 <header class="main-header border-bottom">
                     <h2 class="h2-titolo-carrello">Modifica la Password</h2>
@@ -372,7 +372,7 @@
     </div>
     
     <!-- fine modale accedi registrati -->
-    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal>
+    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header">
             <h2 class="h2-titolo-carrello"></h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
@@ -403,7 +403,7 @@
             </div>
         </form>
         <!-- modal reset password -->
-        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal>
+        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal data-deep-link="true">
             <form autocomplete="on">
                 <header class="main-header border-bottom">
                     <h2 class="h2-titolo-carrello">Modifica la Password</h2>
