--- a/reset-password.html
+++ b/reset-password.html
@@ -72,7 +72,7 @@
             </div>
         </form>
     </div>
-    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal>
+    <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header border-bottom">
             <h2 class="h2-titolo-carrello">Accedi o Registrati</h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
@@ -103,7 +103,7 @@
             </div>
         </form>
         <!-- modal reset password -->
-        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal>
+        <div id="resetPassword" class="reveal reveal-ecommerce" data-reveal data-deep-link="true">
             <form autocomplete="on">
                 <header class="main-header border-bottom">
                     <h2 class="h2-titolo-carrello">Modifica la Password</h2>
