--- a/menu.html
+++ b/menu.html
@@ -243,6 +243,56 @@
     					</div> -->
     				</div>
     			</div>
+                <div class="small-12 cell">
+                    <h2>Sushi Nigiri</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/NigiriSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Salmone">
+                                    <h3>Nigiri Salmone<span class="price ">3,5</span></h3>
+                                    <p>Salmone su riso (2 pezzi).<span class=""><br><small>Allergeni: Pesce</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/NigiriTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Tonno">
+                                    <h3>Nigiri Tonno<span class="price ">4</span></h3>
+                                    <p>Tonno su riso (2 pezzi).<span class=""><br><small>Allergeni: Pesce</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/NigiriBranzino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Branzino">
+                                    <h3>Nigiri Branzino<span class="price ">5</span></h3>
+                                    <p>Branzino su riso (2 pezzi).<span class=""><br><small>Allergeni: Pesce</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/NigiriGamberoalVapore_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Gambero al Vapore">
+                                    <h3>Nigiri Gambero al Vapore<span class="price ">3,5</span></h3>
+                                    <p>Gambero al vapore su riso (2 pezzi).<span class=""><br><small>Allergeni: Crostacei</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/NigiriGamberoRosso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Gambero Rosso">
+                                    <h3>Nigiri Gambero Rosso<span class="price ">5</span></h3>
+                                    <p>Gambero rosso su riso (2 pezzi).<span class=""><br><small>Allergeni: Crostacei</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
