--- a/asporto.html
+++ b/asporto.html
@@ -51,7 +51,7 @@
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav>
-    <header><img src="assets/img/cover/cover-asporto.jpg" alt="Ca' Vecchia Beerstrot Asporto"/></header>
+    <header><img src="assets/img/cover/cover-asporto.jpg" alt="Sushi e Hanburger. Una nuova armonia"/></header>
     <div class="grid-container">
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
