--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -13,7 +13,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torte Compleanno | Ca' Vecchia Beerstrot </title>
-    <meta name="description" content="Per festeggiare i tuoi compleanni abbiamo creato un menù particolare.">
+    <meta name="description" content="Per festeggiare i tuoi compleanni abbiamo creato un menù torte particolare.">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/torte-compleanno.html">
