--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -65,12 +65,12 @@
     	<div class="grid-container">
     		<section class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
-    				<h2>I Nostri Dolci<small>Da ordinare almeno 2 giorni prima dell'evento</small></h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+    				<h2>I Nostri Dolci a Torta<small>Da ordinare almeno 2 giorni prima dell'evento</small></h2>
+    				<div class="grid-x small-up-1 medium-up-2 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Cheesecake<span class="price ">3,5€ a porzione</span></h3>
+    								<h3>Cheesecake<span class="price ">3,5€ a porzione (min. 4 porzioni)</span></h3>
     								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula.</p>
     							</div>
     						</div>
@@ -78,7 +78,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Blondie<span class="price ">3,5€ a porzione</span></h3>
+    								<h3>Blondie<span class="price ">3,5€ a porzione (min. 4 porzioni)</span></h3>
     								<p>Brownie con nocciole ricoperto con crema chantilly.</p>
     							</div>
     						</div>
@@ -87,11 +87,11 @@
     			</div>
     			<div class="small-12 cell">
     				<h2>Le Mousse<small>Da ordinare almeno 4 giorni prima dell'evento</small></h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+    				<div class="grid-x small-up-1 medium-up-2 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Cioccolatosa<span class="price ">4€ a porzione</span></h3>
+    								<h3>Cioccolatosa<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Bicotto al cacao.<br>
     									Croccantino alla gianduia.<br>
     									Cremoso al cioccolato bianco.<br>
@@ -104,7 +104,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Lampone e Pistacchio<span class="price ">4€ a porzione</span></h3>
+    								<h3>Lampone e Pistacchio<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Biscotto al pistacchio.<br>
     									Croccantino al pistacchio.<br>
     									Cremoso al pistacchio.<br>
@@ -116,7 +116,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Nocciolosa<span class="price ">4€ a porzione</span></h3>
+    								<h3>Nocciolosa<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Savoiardo bagnato alla nocciola.<br>
     									Cremino alla nocciola.<br>
     									Cremoso alla nocciola.<br>
@@ -128,7 +128,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Mimosa<span class="price ">4€ a porzione</span></h3>
+    								<h3>Mimosa<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Savoiardo bagnato ai fiori d’arancio.<br>
     									Crema chantilly allo zabaione con fragole, pesche e ananas.<br>
     								</p>
@@ -138,12 +138,12 @@
     				</div>
     			</div>
     			<div class="small-12 cell">
-    				<h2>I Tradizionali<small>Da ordinare almeno 4 giorni prima dell'evento</small></h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+    				<h2>Le Tradizionali<small>Da ordinare almeno 4 giorni prima dell'evento</small></h2>
+    				<div class="grid-x small-up-1 medium-up-2 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Tiramisù<span class="price ">4€ a porzione</span></h3>
+    								<h3>Tiramisù<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Savoiardo bagnato al caffè.<br>
     									Mousse cremosa al mascarpone.
     								</p>
@@ -153,9 +153,9 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Millefoglie<span class="price ">4€ a porzione</span></h3>
+    								<h3>Millefoglie<span class="price ">4€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Sgoglia croccante.<br>
-    									Crema chantilly con gocce di cioccolato / croccantino / frutti di bosco/fragole.
+    									Crema chantilly con gocce di cioccolato / croccantino / frutti di bosco / fragole.
     								</p>
     							</div>
     						</div>
